fix(flyout): get rid of vertical useless scrollbar

--- a/src/definitions/modules/flyout.less
+++ b/src/definitions/modules/flyout.less
@@ -40,7 +40,7 @@
   max-height: 100%;
   border-radius: 0 !important;
   margin: 0 !important;
-  overflow-y: auto !important;
+  overflow-y: hidden !important;
   z-index: @topLayer;
 
   background: #FFFFFF;
